@@ -1,1 +1,2 @@
-@import url("basic");
+@import url("basic.css");
+@import url("default.css");
